# safe_ffi

./: .gitignore  README.md
c/: c_wrapper.c  c_wrapper.h
c/test/: main.c
examples_and_tests/c/: README.md  main.c
examples_and_tests/firefox/: README.md  index.js
examples_and_tests/javascript/: README.md  binding.gyp  interface.i  nodejs_sample_script.js
examples_and_tests/python/: README.md  interface.i
examples_and_tests/qt/: README.md  mainwindow.cc  mainwindow.h  mainwindow.ui  safe-desktop-app.pro
rust/: Cargo.toml
rust/src/: errors.rs  implementation.rs  lib.rs  macros.rs
