[package]
name          = "safe_ffi"
version       = "0.0.1"
authors       = ["Spandan Sharma <spandan.sharma@maidsafe.net>"]
description   = "FFI-wrapper over safe_nfs and safe_dns"
#documentation = "" // TODO
#repository    = "" // TODO
readme        = "README.md"
license       = "GPL-3.0"
homepage      = "http://maidsafe.net"

[lib]
name       = "safe_ffi"
crate_type = ["dylib"]

[dependencies]
# ---- Maidsafe ----
#safe_nfs    = "*"
#safe_dns    = "*"
#safe_client = "*"

# ---- Others ----
libc        = "*"
sodiumoxide = "*"

[dependencies.safe_client]
git = "https://github.com/maidsafe/safe_client.git"

[dependencies.safe_nfs]
git = "https://github.com/maidsafe/safe_nfs.git"

[dependencies.safe_dns]
git = "https://github.com/maidsafe/safe_dns.git"

[features]
USE_ACTUAL_ROUTING = ["safe_dns/USE_ACTUAL_ROUTING",
		      "safe_nfs/USE_ACTUAL_ROUTING",
		      "safe_client/USE_ACTUAL_ROUTING"]
