[package]
name          = "safe_ffi"
version       = "0.1.0"
authors       = ["Spandan Sharma <spandan.sharma@maidsafe.net>"]
description   = "FFI-wrapper over Client Modules"
#documentation = "" // TODO
#repository    = "" // TODO
readme        = "README.md"
license       = "GPL-3.0"
homepage      = "http://maidsafe.net"

[lib]
name       = "safe_ffi"
crate_type = ["staticlib"]

[dependencies]
# ---- Maidsafe ----
routing     = "0.3.*"
safe_nfs    = "0.1.*"
safe_dns    = "0.1.*"
safe_client = "0.1.*"

# ---- Others ----
libc        = "*"
sodiumoxide = "*"

[features]
use-mock-routing = ["safe_dns/use-mock-routing",
                    "safe_nfs/use-mock-routing",
                    "safe_client/use-mock-routing"]
